--- a/The World Report.Rmd
+++ b/The World Report.Rmd
@@ -11,7 +11,7 @@ The project...
 
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE}
-#PART 1: Read csv, merge, clean.
+#PART 1: Read csv, merge, clean and plot outliers.
 library(readr)
 library(readxl)
 library(dplyr)
@@ -25,6 +25,8 @@ cleaned %>%
   select(everything()) %>%
   summarise_all(funs(sum(is.na(.)))) %>% rowSums()
 ```
+
+![Outliers.](img/Outliers.png)
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, dpi=300, fig.width=20,fig.height=8}
 # PART 2: PCA
