--- a/The World Report.Rmd
+++ b/The World Report.Rmd
@@ -26,7 +26,7 @@ cleaned %>%
   summarise_all(funs(sum(is.na(.)))) %>% rowSums()
 ```
 
-![Outliers.](img/Outliers.png)
+![The plot with potential outliers](img/Outliers.png)
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, dpi=300, fig.width=20,fig.height=8}
 # PART 2: PCA
