--- a/The World Report.Rmd
+++ b/The World Report.Rmd
@@ -6,9 +6,13 @@ output:
   word_document: default
   html_document: default
 ---
+#Introduction:
+Team clearly described the dataset and clearly described the motivation behind studying the data. Team provided
+scholarly citations or quantitative facts to describe the motivation.
 
-The project...
-
+#Data Cleaning and Outlier Visualization:
+Team clearly described their data cleaning and outlier removal process. Team presented insightful visualizations
+motivating to do further exploratory or confirmatory analysis.
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE,dpi=300, fig.width=20,fig.height=11}
 #PART 1: Read csv, merge, clean and plot outliers.
@@ -26,7 +30,12 @@ cleaned <- Read_Clean()
 #   select(everything()) %>%
 #   summarise_all(funs(sum(is.na(.)))) %>% rowSums()
 ```
+#Dimension Reduction Analysis: 
+Team applied dimension reduction analysis correctly and discussed the
+motivation behind that. Also, they provided interesting insights into the
+results.
 
+Part A: MDS
 ```{r}
 #PART 2: MDS
 ```
