--- a/The World Report.Rmd
+++ b/The World Report.Rmd
@@ -35,6 +35,7 @@ motivation behind that. Also, they provided interesting insights into the
 results.
 
 ##Part A: MDS
+- ALL VARIABLES INCLUDED
 -we can see Clusters
 -Asia: we can see is the most spread out and has the most outliers, spreads across Africa to Europe 
 -Africa is the opposite of Europe
@@ -54,6 +55,23 @@ library(ggbiplot) #if the library is not present use the code below
 source('PCA.R')
 (PrinCompPlot <- PCA(cleaned))
 ```
+FROM PCA excluded are: pop_total, murder_pp, armed_pp, urban_pop_tot, investment_per_of_GDP
+it is because they spoil correlation between variables and as such more PC would be needed to explain
+the relation.
+
+## PCA MEANING:
+# PC1: Developed countries, HIGH loaded in: phones, life exp., less corrup., internet income 
+# PC2: sex ratio is high, suicide low
+# PC3: inequality is high
+
+- ellipses to help visualize concentration of points. The size of ellipses is influenced by outliers.
+
+- on the right we have develope countires: EU, North America where the most correlated are: less corruption, internet, life exp., phones, income.
+- on the left have not as developed countries: Africa where Child mortality and children per woman and inequality is high.
+-Asia is the most diverse continent (especially in PC2). It also has the highest sex ration (means more mean per woman). Super low PC2 for sex ration (Quatar, UAE)
+- Central America & South are in the middle on the plot
+
+- on PC1 & PC3 explain better Africa. (it is because PC3 is mostly about inequality and development)
 
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, dpi=300, fig.width=11,fig.height=7}
@@ -62,6 +80,9 @@ library(ape)
 source('cluster_continents.R')
 Cl_continents <- cluster_continents(cleaned)
 ```
+Include all variables
+
+South, North and Europe are very similar. AND C America, Asia, Oceania and Africa are similar. Iteresting is Africa is clustered with Oceania (with include Australia and NZ but also many small isnland which push Oceania into level of Africa)
 
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
@@ -70,8 +91,10 @@ library(mclust)
 library(maptools)
 source('clusters_countries.R')
 Cl_countries <- clusters_countries(cleaned)
-#Show Centers
+
 ```
+
+- compare chi.square test -> dependency between groups and continents. Model based groups are more similar to continents.
 
 
 ```{r}
