--- a/The World Report.Rmd
+++ b/The World Report.Rmd
@@ -1,32 +1,25 @@
 ---
 title: "The World Report"
-author: "Us"
-date: "April 26, 2019"
+subtitle: "Multivariate Analysis"
+author: "Marcin Grzechowiak, Mikaela Pisani, Roger Valdez, Jereamy Riggs"
+date: "May, 2019"
 output:
-  word_document: default
-  pdf_document: default
   html_document: default
+  pdf_document: default
+  word_document: default
 ---
 
-#I. Introduction: ROGELIO
-Dataset:
-The dataset is used from Gapminder World, which contains data from several sources. It contains information from different indicators about the population for each country. 
-The indicators considered for this study are Population Total, Murder Total, Armed Forces Personnel Total, Cell Phones per 100 People, Fertility Rate Total, Urban Population, Suicide Total, Life Expectancy, Corruption Perception Index, Internet Users (% of Population), Child Mortality, Income Per Person, Sex Ratio, Investment(as % of GDP), and Inequality Index(GINI). For more information about the indicators see the appendix of the report.
-All indicators’ values come from the year 2016. The only exception is Sex Ratio. We assume that sex ratio did not change significantly between 2015 and 2016, and using data from 2015 is a good approximation of year 2016.
+#I. Introduction:
+The project was done at Texas Tech University during the Multivariate Analysis class. The dataset is used from Gapminder World, which contains data from several sources. The motivation is focused on comparing countries from the economical, social and government perspectives.
+
 <br/>
 
-Motivation:
-Our motivation is focused on comparing countries from the economical, social and government perspectives. This study can be useful for many people. For instance, for a person that wants to move to another country, it might be important to consider these aspects to make the decision. In addition, it could be useful for the World Health Organization when determining which countries it should support in each field. Finally, firms that want to open an office in another country might be interested in this data as careful considerations are made when making such a large business decision.
-<br/>
-#II. Data Cleaning and Outlier Visualization: ROGELIO
+The aim of this post is to present the results of the analysis, while the complete Report can be found here [github](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/FINAL%20REPORT/The%20World%20Report%20(MA%20Project).pdf). The file contains information about variables and their source as well describe the process of cleaning data. Furthermore, the visualizations presented here are interpreted in more detail in the Report.
 
 
-In this section, the process of data cleaning and identifying outliers is described. After importing the data from multiple csv files, the next process was to merge the columns on the country and by the year(2016).  Once the merging process was complete, a function was found that would divide the countries by the continent they belong in order to create a new column called “continent.”  Unfortunately, the function did not divide the Americas into North, South, and Central so a for loop was created to iterate through the countries column in order to place them into a more specific part of the Americas.  The reason for the new column “continent” was to account for missing values in our data.  If an NA value was spotted it would insert the median value depending on the continent associated with the country that had the missing value.  Outliers are present in the data and boxplots were created in order to visualize which countries were outliers according to the indicator. Outliers were not removed because in this case the outlier values were not the results of an error, but instead were actual datapoints. If the outliers were removed, the potential to lose meaning and value from the data would increase greatly. The reason is an outlier would be associated with a country and in order to remove the outlier we would have to delete an entire row.
-<br/>
-
-In order to get insights about outliers, five columns were presented on boxplots below. Please find all boxplots for each column in the Appendix.
+#II. Data cleaning
+The whole code for data loading, merging and cleaning is preseted in the function Read_Clean() [link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/Read_Clean.R)
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE,dpi=300, fig.width=20,fig.height=11}
-#PART 1: Read csv, merge, clean and plot outliers.
 library(readr)
 library(readxl)
 library(dplyr)
@@ -37,59 +30,57 @@ cleaned <- Read_Clean()
 ```
 
 
+<br/>
+<br/>
 
 
-#III. Dimension Reduction Analysis: MIKA & ME
-<!-- Team applied dimension reduction analysis correctly and discussed the -->
-<!-- motivation behind that. Also, they provided interesting insights into the -->
-<!-- results. -->
+#III. Visualizations
 
-The data set contains 17 variables. In order to easly present them, dimension reduction analysis were computed. Two techniques were used: Multidimensional Scaling (MDS) and Principal Component Analysis (PCA).
+## A. Dimension Reduction
 
-
-####Part A: Multidimensional Scaling (MDS)
-
-In order to provide a general insignis into the data, all countries were presented in 3-dimensional space. At the first glance clusters between continents can be seen. Countries which are in the same continent in general present a similar profile. The most diverse continent is Asia with many outliers. Countries in Asia spread from Europe (the one end) and Africa (the second end). It can be seen that North America and South America are similar to each other.
-
+#### Multidimensional Scaling (MDS)
+Code for the graph: [click](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/MDS.R)
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, include=FALSE}
 library(scatterplot3d)
 # source('MDS.R')
 ```
 
-![Continents presented in 3D space](img/mds.gif)
+![Continents presented in 3D space](img/mds1.gif)
+
+In order to provide a general insignis into the data, all countries were presented in 3-dimensional space. At the first glance clusters between continents can be seen. Countries which are in the same continent in general present a similar profile. The code can be found here [github](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/MDS.R)
 
 
+<br/>
 
-
-#####Part B: Principal Components
+##### Principal Components Analysis
+Code for PCA: [click](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/PCA.R)
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300, include=FALSE}
 library(maptools)
 library(pryr)
-library(ggbiplot) #if the library is not present use the code below
+library(ggbiplot) 
 #library(devtools)
 #install_github("vqv/ggbiplot")
 source('PCA.R')
 PrinCompPlot <- PCA(cleaned)
 ```
 
-The Principal Component Analysis (PCA) was used in order to provide insights into the data and visualize it in two-dimensional plots. Three principal components were presented on the plots below and their cumulative proportion of variance is 74%.
-<br/>
-
 Interpretation of PC1, PC2, and PC3 is as follows:<br/>
-PC1: is highly loaded in variables such as number of phones, life expectancy, Corruption index, Acces to the Internet and Income.<br/>
-PC2: is highly loaded in the number of suicides and sex ratio. <br/>
-PC3: is especially meaningful in the context of inequality.
+PC1: highly loaded in variables such as number of phones, life expectancy, Corruption index, Acces to the Internet and Income.<br/>
+PC2: highly loaded in the number of suicides and sex ratio. <br/>
+PC3: especially meaningful in the context of inequality.
 
 ![Summary Result for the first three Principal Components](img/PCA_loadings.png)
 
 
-In order to present the PCA result, two graphs were displayed below. Ellipses were added to the graphs which shows a concentration of points. Ther size is influenced by outliers. <br/>
-<br/>
-
 *Plot PC1 vs PC2* 
+
+```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
+PrinCompPlot[1]
+```
+
 <br/>
--On the right of the plot with a high value of PC1 hight developed countries in Europe and North America can be spotted. Those contents are above the average in the context of Less corruption, Life expectancy, Internet access, number of phones and income.
+-On the right of the plot with a high value of PC1 high developed countries in Europe and North America can be spotted. Those contents are above the average in the context of Less corruption, Life expectancy, Internet access, number of phones and income.
 
 <br/>
 
@@ -99,23 +90,19 @@ In order to present the PCA result, two graphs were displayed below. Ellipses we
 
 - Interesting phenomena is presented by looking at Asia. The continent is the most diverse among all of the others in both directions PC1 and PC2. Some countries in Asia are highly developed while others are rather poor (PC1). In the context of PC2, some countries have extreme value for sex ratio (men outnumber women significantly). Those countries are Qatar and the UAE.
 
-<br/>
-
-- PC1 and PC2 do not give us many insights into Central America nor South America. Since values for these continents are in the middle of the plot.
-
-```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
-PrinCompPlot[1]
-```
 
 *Plot PC1 vs PC3* 
-<br/>
-The second plot shows that very high inequality is presented especially in South America and Africa
-<br/>
-The above plots show also that there is a high correlation between variables: number of phones, less corruption, Internet access and income. Another group of highly correlated variables are child mortality and a number of children per woman.  
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
 PrinCompPlot[2]
 ```
+
+<br/>
+The second plot shows that very high inequality is presented especially in South America and Africa
+<br/>
+A high correlation between variables: number of phones, less corruption, Internet access and income. Another group of highly correlated variables are child mortality and a number of children per woman.  
+
+
 
 *PCA on the World Map* 
 <br/>
@@ -131,25 +118,25 @@ Note: from the analysis columns such as Population total, number of murder, numb
 
 
 
+## B. Cluster Analysis
 
+####Hierarchical Clustering between Continents
 
-
-#IV. CLUSTERING - ROGELIO
-#### PART A: Hierarchical Clustering between Continents
-The hierarchical clustering model explains that the data has two main clusters.  Looking at the model the first cluster includes Africa, Oceania, Asia & Central America and the second includes South America, Europe, North America. What is interesting about this clustering is that Africa is clustered with Oceania which includes Australia and New Zealand.  The reason this is interesting is the fact that Australia and New Zealand are considered highly developed, but they are grouped with the entire African continent.  This is more than likely due to the reason that Oceania also has many small islands included in the continent that are not as developed which causes the grouping with Africa.
+[Code](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/cluster_continents.R)
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, dpi=300, fig.width=11,fig.height=7}
-# PART 3: Hierarchical Clustering between Continents
 library(ape)
 source('cluster_continents.R')
 Cl_continents <- cluster_continents(cleaned)
 ```
 
+The hierarchical clustering model explains that the data has two main clusters.  Looking at the model the first cluster includes Africa, Oceania, Asia & Central America and the second includes South America, Europe, North America. Interesingly Oceania is not clustered with highly developed countries despite the continent contains highly developed countries such as Australia and New Zeland.
 
 
-#### PART B: K-means and Model-Based clustering between Conutries
-Jereamy both
+
+
+####K-means and Model-Based clustering between Conutries
+[Code](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/clusters_countries.R)
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
-# PART 4: K-means & Model Based Clustering between Countries
 library(mclust)
 source('clusters_countries.R')
 Cl_countries <- clusters_countries(cleaned)
@@ -204,52 +191,5 @@ source('EFA.R')
 groups = EFA_plot(cleaned)
 ```
 
-Note: There are some countries such as Singapore or Qatar that are in the groups but are too small to show in the map. 
-<br/>
-<br/>
-The countries in group 1 are:  
+Note: There are some countries such as Singapore or Qatar that are in the groups but are too small to show in the map.
 
-```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300, , results='asis'}
-library(knitr)
-print(groups[1])
-```
-
-The countries in group 2 are:  
-
-```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300, , results='asis'}
-library(knitr)
-print(groups[2])
-```
-
-
-The countries in group 3 are:  
-
-```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300, , results='asis'}
-library(knitr)
-print(groups[3])
-```
-
-The countries in group 4 are:  
-
-```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300, , results='asis'}
-library(knitr)
-print(groups[4])
-```
-
-#VI. Confirmatory Factor Analysis -> Mika put links
-```{r}
-#PART 6: CFA
-#???????
-```
-
-
-
-#VII. Conclusion ->
-<!-- Team presented meaningful findings and discussed the pros and cons of their study. Team suggested some future works for post analysis. -->
-
-Because of big differences
-
-
-#VIII. Appendix
-
-![All boxplot visualizing Outliers](img/Outlier(1600x1200).png)
