--- a/The World Report.Rmd
+++ b/The World Report.Rmd
@@ -9,16 +9,19 @@ output:
   word_document: default
 ---
 
-#I. Introduction:
-The project was done at Texas Tech University during the Multivariate Analysis class. The dataset is used from Gapminder World, which contains data from several sources. The motivation is focused on comparing countries from the economical, social and government perspectives.
-
+<br/>
 <br/>
 
-The aim of this post is to present the results of the analysis, while the complete Report can be found here [github](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/FINAL%20REPORT/The%20World%20Report%20(MA%20Project).pdf). The file contains information about variables and their source as well describe the process of cleaning data. Furthermore, the visualizations presented here are interpreted in more detail in the Report.
+#I. Introduction:
+The report was done at Texas Tech University as a final project of Multivariate Analysis class. The dataset is used from Gapminder World, which contains data from several sources. The motivation is focused on comparing countries from the economical, social and government perspectives. 
 
+The aim of this post is to present the results of the analysis, while the complete Report can be found here [Github Link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/FINAL%20REPORT/The%20World%20Report%20(MA%20Project).pdf). The file contains information about variables and their source as well describe the process of cleaning data. Furthermore, the visualizations presented here are interpreted in more detail in the Report.
+
+<br/>
+<br/>
 
 #II. Data cleaning
-The whole code for data loading, merging and cleaning is preseted in the function Read_Clean() [link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/Read_Clean.R)
+The whole code for data loading, merging and cleaning is preseted in the function Read_Clean() [Github Link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/Read_Clean.R)
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE,dpi=300, fig.width=20,fig.height=11}
 library(readr)
 library(readxl)
@@ -36,10 +39,10 @@ cleaned <- Read_Clean()
 
 #III. Visualizations
 
-## A. Dimension Reduction
+### Dimension Reduction
 
-#### Multidimensional Scaling (MDS)
-Code for the graph: [click](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/MDS.R)
+**a. Multidimensional Scaling (MDS)** <br/>
+Code for the graph: [Github Link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/MDS.R)
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, include=FALSE}
 library(scatterplot3d)
 # source('MDS.R')
@@ -47,13 +50,14 @@ library(scatterplot3d)
 
 ![Continents presented in 3D space](img/mds1.gif)
 
-In order to provide a general insignis into the data, all countries were presented in 3-dimensional space. At the first glance clusters between continents can be seen. Countries which are in the same continent in general present a similar profile. The code can be found here [github](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/MDS.R)
+In order to provide a general insignis into the data, all countries were presented in 3-dimensional space. At the first glance clusters between continents can be seen. Countries which are in the same continent in general present a similar profile.
 
 
 <br/>
+<br/>
 
-##### Principal Components Analysis
-Code for PCA: [click](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/PCA.R)
+**b. Principal Components Analysis (PCA)** <br/>
+Code for the PCA: [Github Link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/PCA.R)
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300, include=FALSE}
 library(maptools)
@@ -65,47 +69,43 @@ source('PCA.R')
 PrinCompPlot <- PCA(cleaned)
 ```
 
-Interpretation of PC1, PC2, and PC3 is as follows:<br/>
-PC1: highly loaded in variables such as number of phones, life expectancy, Corruption index, Acces to the Internet and Income.<br/>
-PC2: highly loaded in the number of suicides and sex ratio. <br/>
-PC3: especially meaningful in the context of inequality.
+Interpretation of PC1, PC2, and PC3 are as follow:<br/>
+**PC1:** highly loaded in variables such as number of phones, life expectancy, Corruption index, Acces to the Internet and Income.<br/>
+**PC2:** highly loaded in the number of suicides and sex ratio. <br/>
+**PC3:** especially meaningful in the context of inequality.
 
 ![Summary Result for the first three Principal Components](img/PCA_loadings.png)
 
+<br/>
 
-*Plot PC1 vs PC2* 
+**Plot PC1 vs PC2** 
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
 PrinCompPlot[1]
 ```
 
-<br/>
--On the right of the plot with a high value of PC1 high developed countries in Europe and North America can be spotted. Those contents are above the average in the context of Less corruption, Life expectancy, Internet access, number of phones and income.
-
-<br/>
+- On the right side of the plot with a high value of PC1 high developed countries in Europe and North America can be spotted. Those countries are above the average in the context of Less corruption, Life expectancy, Internet access, number of phones and income.
 
 - On the left side of the plot, with a low value of PC1 not less developed countries in Africa can be spotted. Those countries are above the average in the context of high child mortality, a number of children per woman and inequality.
 
+- Interesting phenomena is presented by looking at Asia. The continent is the most diverse among all of the others in both directions PC1 and PC2. Some countries in Asia are highly developed while others are rather poor (PC1). In the context of PC2, some countries have extreme value for sex ratio (men outnumber women significantly). Those countries are, for exampe Qatar and the UAE.
+
 <br/>
 
-- Interesting phenomena is presented by looking at Asia. The continent is the most diverse among all of the others in both directions PC1 and PC2. Some countries in Asia are highly developed while others are rather poor (PC1). In the context of PC2, some countries have extreme value for sex ratio (men outnumber women significantly). Those countries are Qatar and the UAE.
-
-
-*Plot PC1 vs PC3* 
+**Plot PC1 vs PC3** 
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
 PrinCompPlot[2]
 ```
 
-<br/>
-The second plot shows that very high inequality is presented especially in South America and Africa
-<br/>
-A high correlation between variables: number of phones, less corruption, Internet access and income. Another group of highly correlated variables are child mortality and a number of children per woman.  
+- The second plot shows that very high inequality is presented especially in South America and Africa
+
+- A high correlation between variables: number of phones, less corruption, Internet access and income. Another group of highly correlated variables are child mortality and a number of children per woman.  
 
 
-
-*PCA on the World Map* 
 <br/>
+
+**PCA on the World Map**  <br/>
 In order to show which countries are the highest in what Principal Component the World Map was presented. From each component (PC1, PC2, and PC3) top 15 countries with the highest loading in each group were chosen and plotted on the map.
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
@@ -115,51 +115,46 @@ PrinCompPlot <- PCA(cleaned)
 Note: from the analysis columns such as Population total, number of murder, number of armed forces, urban population total and percentage of investments are excluded. Those variables had a low correlation with the rest of the columns and much more dimensions would be needed to explain the data. As such information would not be possible to be explained in 2-dimensional plot.
 
 
+<br/>
+<br/>
 
+### Cluster Analysis
 
+**Hierarchical Clustering between Continents** <br/>
 
-## B. Cluster Analysis
-
-####Hierarchical Clustering between Continents
-
-[Code](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/cluster_continents.R)
+Code for the graph: [Github Link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/cluster_continents.R)
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, dpi=300, fig.width=11,fig.height=7}
 library(ape)
 source('cluster_continents.R')
 Cl_continents <- cluster_continents(cleaned)
 ```
 
-The hierarchical clustering model explains that the data has two main clusters.  Looking at the model the first cluster includes Africa, Oceania, Asia & Central America and the second includes South America, Europe, North America. Interesingly Oceania is not clustered with highly developed countries despite the continent contains highly developed countries such as Australia and New Zeland.
+The hierarchical model above explains that the data has three main clusters. The first cluster includes North America, Europe, South America, Central America, and Asia while the second includes Oceania, and the third, Africa. The interesting thing is that Oceania is not clustered with the developed countries like North America and Europe despite it contains countries such as Australia and New Zeland. This is more than likely due to the reason that Oceania also has many small islands included in the continent that are not as developed.
 
+<br/>
+<br/>
 
-
-
-####K-means and Model-Based clustering between Conutries
-[Code](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/clusters_countries.R)
+**K-means and Model-Based Clustering between countries** <br/>
+Code for the graph: [Github Link](https://github.com/grzechowiak/Multivariate-Analysis-Project/blob/master/clusters_countries.R)
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
 library(mclust)
 source('clusters_countries.R')
 Cl_countries <- clusters_countries(cleaned)
 ```
 
-- compare chi.square test -> dependency between groups and continents. Model based groups are more similar to continents.
+- In the case of K-means a scree plot suggests that countries should be divided into 5 groups. The Model Based algorithm decided the number of groups automatically, as such 6 groups were created.
 
-- model based (group7) difficult name (result for this group)
-pop_total murder_pp armed_pp phones_p100 children_p_woman life_exp_yrs suicide_pp urban_pop_tot sex_ratio_p100
-[1,] 239114394         0    0.011     146.317             2.07       78.053          0     118882678        148.681
-     corruption_CPI internet_%of_pop child_mort_p1000 income_per_person investments_per_ofGDP   gini
-[1,]         53.677           75.725           10.791          50579.31                29.942 39.722
+- The developed countries that were observed in the K-means model were split into three separate groups under the Model-based method, appropriately labeled developing, developed, and highly-developed
 
-- Developed countries are split into 3 groups.
+- The poorer, less-developed countries like those found in Africa remained consistent between the two clustering techniques.
 
-- poor countries are the same in both models
+- A comparison of the chi-squared test was performed to determine if a dependency between groups and continents existed. The results suggest that Model-based groups are more similar to continents. The chi-squared test is significant in both methods indicating dependency between the groups and continents. However, for K-Means method, X-squared is equal to 236.76, while for Model-Based method, X-squared is equal to 272.71.
 
-- we lost "crowded" group from k-means. It transfoms into group 7 which describe high Income, Sex Ratio, Population, phones
+<br/>
+<br/>
 
-
-
-# V. Exploratory Factor Analysis -MIKA
-In order to find the number of factors, EFA was performed starting with 1 factor, increasing the number of factors until getting a value for RMSE lower than 0.05. Therefore, it was concluded that the optimal number of factors is four. Performing EFA with 4 factors, the loadings are:    
+# IV. Exploratory Factor Analysis (EFA)
+Exploratory Factor Analysis looks to link observable variables to unobservable variables via regression modeling. The discovery of the relationship(s) between variables without making any assumptions that such relationships may exist is crucial when defining what factors, and how many, may best describe the data.  
 
 ```{r fig.height=10, fig.width=15, message=FALSE, warning=FALSE, dpi=300}
   
@@ -167,22 +162,11 @@ In order to find the number of factors, EFA was performed starting with 1 factor
 source('EFA.R')
 EFA_loadings(cleaned)
 ```
-From the loadings it can be interpreted:  
-<br/>
--1.	Factor 1 has high life expectancy, internet access, balanced income per person and it is low in child mortality and children per women. For these reasons, represents the level of development of the country.
-<br/>
--2.	Factor 2 represents the level of population.
-<br/>
--3.	Factor 3 represents inequality and murder.
-<br/>
--4.	Factor 4 represents the level of income related with the amount of men and women that the country has. 
-In order to visualize these four factors graphically, the top 10 for each factor’s scores was taken and create four groups of countries, where each factor has more relevance. The groups of countries are named according with the meaning of each factor as follows: 
-<br/>
--Factor 1 -> Developed <br/>
--Factor 2 -> Crowed  <br/>
--Factor 3 -> Inequality <br/>
--Factor 4 -> Gender/Income  <br/>
-These can be visualized in the following graph: <br/>
+From the loadings the Factors were interpreted as follow: <br/>
+- **Factor 1:** Developed  <br/>
+- **Factor 2:** High Inequality  <br/>
+- **Factor 3:** Suicide <br/>
+- **Factor 4:** Gender/Income 
 
 
 
@@ -193,3 +177,9 @@ groups = EFA_plot(cleaned)
 
 Note: There are some countries such as Singapore or Qatar that are in the groups but are too small to show in the map.
 
+<br/>
+<br/>
+
+#V. Conclusion
+
+The project was based on different indicators pulled from the GapMinder website. In order to improve analysis more economical, social, financial and technological factors might be added to the models presented in the report in order to profile countries more precisely. The project is available online, in order to contribute in the further analysis please visit: [https://github.com/grzechowiak/Multivariate-Analysis-Project](https://github.com/grzechowiak/Multivariate-Analysis-Project)
